--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,8 +12,8 @@
   </head>
   <body>
 
-  <nav class="light-blue lighten-1" role="navigation">
-      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+  <nav class="blue darken-2" role="navigation">
+      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Bryon Nicoson</a>
           <ul class="right hide-on-med-and-down">
               <li><a href="#">Navbar Link</a></li>
           </ul>
@@ -27,7 +27,7 @@
 
     {{{body}}}
 
-  <footer class="page-footer orange">
+  <footer class="page-footer blue">
       <div class="container">
           <div class="row">
               <div class="col l6 s12">
@@ -58,7 +58,7 @@
       </div>
       <div class="footer-copyright">
           <div class="container">
-              Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+              Made by <a class="lime-text text-accent-1" href="http://materializecss.com">Materialize</a>
           </div>
       </div>
   </footer>
